vlib/v/checker/tests/shared_param_assign_err.vv
fn foo(shared arr []string) {
	arr2 := arr
	println(arr2)
}

fn main() {
	shared arr := ['']
	foo(shared arr)
}
